Form structure is added
Everything apart from form structure is ready. Will be working on form css soon.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,45 @@
                 </div>
             </div>
             <div class="formContainer">
-
+                <h2>Let's do this!</h2>
+                <form action="#" id="form">
+                    <div class="formRow">
+                        <div class="formInput">
+                            <label for="">FIRST NAME</label>
+                            <input type="text">
+                        </div>
+                        <div class="formInput">
+                            <label for="">LAST NAME</label>
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="formRow">
+                        <div class="formInput">
+                            <label for="">EMAIL</label>
+                            <input type="email">
+                        </div>
+                        <div class="formInput">
+                            <label for="">PHONE NUMBER</label>
+                            <input type="tel">
+                        </div>
+                    </div>
+                    <div class="formRow">
+                        <div class="formInput">
+                            <label for="">PASSWORD</label>
+                            <input type="password">
+                        </div>
+                        <div class="formInput">
+                            <label for="">CONFIRM PASSWORD</label>
+                            <input type="password">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="button">
+                <button type="submit" form="form">Create Account</button>
+            </div>
+            <div class="loginText">
+                Already have an account? <span style="color: #596D48;">Log in</span>
             </div>
         </div>
     </div>    
